tests/ui/unexpected_after_map_entry.stderr
error: no rules expected the token `=>`
  --> $DIR/unexpected_after_map_entry.rs:13:23
   |
13 |     json!({ "k": true => });
   |                       ^^ no rules expected this token in macro call

error: aborting due to previous error

